# sust-cse-carnival-online-preli

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  config.py  logger.py  main.py  schemas.py
app/data/: __init__.py  keywords.py  keywords_banglish.py  keywords_bn.py  keywords_en.py
app/routers/: investigate.py
app/services/: __init__.py  case_classifier.py  complaint_parser.py  department.py  evidence.py  investigator.py  matcher.py  reason_codes.py  reply_builder.py  response_formatter.py  safety.py  severity.py
examples/: bangla_complaint.json  duplicate_complaint.json  phishing_complaint.json  sample_request.json
tests/: fixtures.py  test_case_classifier.py  test_complaint_parser.py  test_investigator.py  test_matcher.py  test_safety.py  test_sample_pack.py  test_severity.py
