[project]
name = "supportops-investigator"
version = "1.0.0"
description = "AI-powered SupportOps Investigator — SUST CSE Carnival 2026 Codex Community Hackathon"
requires-python = ">=3.11"
authors = [{ name = "SUST Codex Hackathon Team" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 110
target-version = "py311"